# fullcurrent_smarts

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  flash.jlink  flash_script.jlink  openocd.cfg
config/: FreeRTOSConfig.h  fullcurrent_smarts.skylab.yaml  system_cfg.h
src/: adc.c  adc.h  analog.c  calibration.c  control_loop.c  control_loop.h  debug_uart.c  debug_uart.h  diagnostics.c  diagnostics.h  main.c  measurements.c  measurements.h  pwm.c  pwm.h  skylab.h
src/old/: calibration.h  can_handle.c  can_handle.h  configuration.c  configuration.h  fan.c  fan.h  fault.c  fault.h  fir_filters.h  foc.c  foc.h  fram_map.h  fullCAN.c  fullCAN.h  halls.c  halls.h  mCAN.c  mCAN.h  main.c  motor.c  motor.h  motor_position.c  motor_position.h  pi.c  pi.h  pole_position.c  pole_position.h  smarts_leds.h  system_stm32f4xx.c
