cmake_minimum_required(VERSION 3.3)
project(fullcurrent)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(

        hardware
        d1k/FreeRTOS/include
        d1k/FreeRTOS/portable/GCC/ARM_CM4F
        d1k/CMSIS/Device/ST/STM32F4xx/Include
        d1k/CMSIS/Include
        d1k/STM32F4xx_StdPeriph_Driver/inc
        config
        d1k/src
        src
)

set(SOURCE_FILES
    config/FreeRTOSConfig.h
    config/stm32f4xx_conf.h
        config/system_cfg.h
    d1k/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
    d1k/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
    d1k/CMSIS/Include/arm_common_tables.h
    d1k/CMSIS/Include/arm_math.h
    d1k/CMSIS/Include/core_cm0.h
    d1k/CMSIS/Include/core_cm3.h
    d1k/CMSIS/Include/core_cm4.h
    d1k/CMSIS/Include/core_cm4_simd.h
    d1k/CMSIS/Include/core_cmFunc.h
    d1k/CMSIS/Include/core_cmInstr.h
    d1k/FreeRTOS/include/croutine.h
    d1k/FreeRTOS/include/deprecated_definitions.h
    d1k/FreeRTOS/include/event_groups.h
    d1k/FreeRTOS/include/FreeRTOS.h
    d1k/FreeRTOS/include/list.h
    d1k/FreeRTOS/include/mpu_wrappers.h
    d1k/FreeRTOS/include/portable.h
    d1k/FreeRTOS/include/projdefs.h
    d1k/FreeRTOS/include/queue.h
    d1k/FreeRTOS/include/semphr.h
    d1k/FreeRTOS/include/StackMacros.h
    d1k/FreeRTOS/include/task.h
    d1k/FreeRTOS/include/timers.h
    d1k/FreeRTOS/portable/GCC/ARM_CM4F/port.c
    d1k/FreeRTOS/portable/GCC/ARM_CM4F/portmacro.h
    d1k/FreeRTOS/portable/MemMang/heap_1.c
    d1k/FreeRTOS/portable/MemMang/heap_2.c
    d1k/FreeRTOS/portable/MemMang/heap_3.c
    d1k/FreeRTOS/portable/MemMang/heap_4.c
    d1k/FreeRTOS/portable/MemMang/heap_5.c
    d1k/FreeRTOS/croutine.c
    d1k/FreeRTOS/event_groups.c
    d1k/FreeRTOS/list.c
    d1k/FreeRTOS/queue.c
    d1k/FreeRTOS/tasks.c
    d1k/FreeRTOS/timers.c
        d1k/src/can.c
        d1k/src/can.h
        d1k/src/i2c.c
        d1k/src/i2c.h
    d1k/src/drivers/mb85rcxxx.c
    d1k/src/drivers/mb85rcxxx.h
    d1k/src/nvmem.c
    d1k/src/nvmem.h
    d1k/src/led.c
    d1k/src/led.h
    d1k/src/syscalls.c
    d1k/STM32F4xx_StdPeriph_Driver/inc/misc.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_adc.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_can.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_crc.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_cryp.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dac.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dbgmcu.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dcmi.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dma.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_exti.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_flash.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_fsmc.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_gpio.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_hash.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_i2c.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_iwdg.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_pwr.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rcc.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rng.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rtc.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_sdio.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_spi.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_syscfg.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_tim.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_usart.h
    d1k/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_wwdg.h
    d1k/STM32F4xx_StdPeriph_Driver/src/misc.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_adc.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_can.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_crc.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_aes.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_des.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_tdes.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dac.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dbgmcu.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dcmi.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dma.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_exti.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_flash.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_fsmc.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_gpio.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_md5.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_sha1.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_i2c.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_iwdg.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_pwr.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rcc.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rng.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rtc.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_sdio.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_spi.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_syscfg.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_tim.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_usart.c
    d1k/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_wwdg.c
    hardware/stm32f4xx_it.c
    hardware/stm32f4xx_it.h
    hardware/system_stm32f4xx.c
    src/diagnostics.c
    src/diagnostics.h
    src/main.c
    src/pwm.c
    src/pwm.h
        d1k/src/func/math_limits.c
        d1k/src/func/math_limits.h
        src/control_loop.c
        src/control_loop.h
        src/adc.c
        src/adc.h
	src/measurements.h
	src/measurements.c
)

add_executable(fullcurrent ${SOURCE_FILES})
